welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:4: error: missing arguments for method avance;
follow this method with `_' if you want to treat it as a partially applied function
	avance
        ^MethodsPicture:11: error: missing arguments for method avance;
follow this method with `_' if you want to treat it as a partially applied function
	 avance
         ^MethodsPicture:15: error: missing arguments for method avance;
follow this method with `_' if you want to treat it as a partially applied function
	 avance
         ^MethodsPicture:19: error: missing arguments for method avance;
follow this method with `_' if you want to treat it as a partially applied function
	 avance
         ^MethodsPicture:30: error: missing arguments for method avance;
follow this method with `_' if you want to treat it as a partially applied function
	avance
        ^