welcome.lessons.welcome.methods.picture.MethodsPicture.scala.code
override def run() {
def quadrille() {
	avance
	baisseBrosse
	leveBrosse
}
def faireV(c:Color) {
	 setCouleurBrosse(c)
	 quadrille
	 avance
	 gauche
	 quadrille
	 droite
	 avance
	 droite
	 quadrille
	 gauche
	 avance
	 gauche 
}
def carre {
	faireV(Color.YELLOW)
	faireV(Color.RED)
	faireV(Color.BLUE)
	faireV(Color.GREEN)
}
def avance(cases:Int) {
	for (nb <- 1 to cases)
	avance
}
for (nb <- 1 to 3) {
	for (nb2 <- 1 to 3){
		carre
		avance(5)
	}
	gauche
	avance(5)
	droite
}
}
